...
        super.viewDidDisappear(animated)
        stateTask?.cancel()
        stateTask = nil
    }

    private func configureView() {
        title = "Products"
        view.backgroundColor = ColorToken.backgroundPrimary.color
        tableView.backgroundColor = ColorToken.backgroundPrimary.color
        tableView.translatesAutoresizingMaskIntoConstraints = false
        tableView.dataSource = self
        tableView.delegate = self
        tableView.register(ProductCell.self, forCellReuseIdentifier: ProductCell.reuseIdentifier)
...
